--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
 .App {
   text-align: center;
+  width: 100vw;
+  height: calc(100vh);
+  /* background-color: red !important; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Pictures {
+  margin: 10px;
+}
+img {
+  margin: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Canvas {
+  width: 300px;
+  height: 500px;
+  border: 2px solid black;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100vh;
 }
