--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,86 +1,128 @@
-// .header-container{
+.header-container {
+  background-color: white;
+  padding: 20px 0px;
+  border-top-right-radius: 20px;
+  display: flex;
+  justify-content: space-around;
 
-// }
-.header-sub-container {
+  .header-title {
     display: flex;
-    background-color: white;
-    padding: 20px 0px;
-    border: 1px gray solid;
-    border-top-right-radius: 20px;
 
-    .dashboard-left-icon {
-        margin: 6px 0px 6px 40px;
-        background-color: #9980ec6b;
-        display: flex;
-        align-items: center;
-        padding: 6px 10px;
-        border-radius: 2px;
+    // padding-left: 40px;
+    .header-left {
+      svg {
+        margin-top:6px;
+      }
     }
 
-    .header {
+    .header-breadcums {
+      padding-left: 60px;
+
+      .title,
+      .sub-title {
+        color: #4513ec;
+      }
+
+      .inventroy {
+        color: #808080c7;
+      }
+
+      .page-name {
         display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        align-content: flex-start;
-        align-items: flex-start;
-        padding-left: 80px;
-        font-size: 16px;
-        font-family: sans-serif;
+        font-weight: bold;
+        font-size: 20px;
+      }
 
-        .dashboard-title {
-            margin-top: 10px;
-        }
-
-        .title,
-        .sub-title {
-            color: #490449;
-            font-weight: bold;
-        }
-
-        svg {
-            margin-bottom: -4px;
-            font-size: 20px;
-            color: #340234;
-            padding: 0px 4px;
-
-        }
+      svg {
+        margin-bottom: -4px;
+        font-size: 20px;
+        color: #340234;
+        padding: 0px 4px;
+      }
     }
+  }
+
+  .header-options {
+    display: flex;
+    width: 66%;
+    justify-content: flex-end;
+    .header-icons{
+      display: flex;
+      .right-reload{
+        background-color: #80808021;
+      }
+      .left-reload{
+        margin-left: 20px;
+        background-color: #80808021;
+      }
+    }
+
+    .discard-btn {
+      padding: 10px 40px;
+      background-color: #9980ec24;
+      border-radius: 6px;
+      color: #3909d7;
+      margin-left: 30px;
+    }
+
+    .save-btn {
+      padding: 10px 26px;
+      background-color: #54078F;
+      border-radius: 6px;
+      color: white;
+      margin-left: 30px;
+    }
+    .edit{
+      margin-left: 30px;
+    }
+  }
 }
 
+.arrow-icon {
+  background-color: #9980ec6b;
+  padding: 6px 10px;
+  border-radius: 4px;
+  svg{
+    margin-top:6px;
+  }
+}
 
 .modal {
-    font-size: 12px;
-    background-color: #340234;
-    color: white;
-    position: absolute;
-  }
-  .modal > .header {
-    width: 100%;
-    border-bottom: 1px solid gray;
-    font-size: 18px;
-    text-align: center;
-    // padding: 5px;
-  }
-  .modal > .content {
-    width: 100%;
-    padding: 10px 5px;
-  }
-  .modal > .actions {
-    width: 100%;
-    padding: 10px 5px;
-    margin: auto;
-    text-align: center;
-  }
-  .modal > .close {
-    cursor: pointer;
-    position: absolute;
-    display: block;
-    padding: 2px 5px;
-    line-height: 20px;
-    right: -10px;
-    top: -10px;
-    font-size: 24px;
-    background: #cd2222;;
-    border-radius: 18px;
-    border: 1px solid #cfcece;
-  }
+  font-size: 12px;
+  background-color: #340234;
+  color: white;
+  position: absolute;
+}
+
+.modal>.header {
+  width: 100%;
+  border-bottom: 1px solid gray;
+  font-size: 18px;
+  text-align: center;
+}
+
+.modal>.content {
+  width: 100%;
+  padding: 10px 5px;
+  text-align: center;
+}
+
+.modal>.actions {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
+
+.modal>.close {
+  cursor: pointer;
+  position: absolute;
+  display: block;
+  padding: 2px 5px;
+  line-height: 20px;
+  right: -10px;
+  top: -10px;
+  font-size: 24px;
+  background: #cd2222;
+  border-radius: 18px;
+  border: 1px solid #cfcece;
+}
